--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -1,3 +1,10 @@
-
-<p>board works!</p>
-<app-board-cell [value]="rowData"/>
+{{checkRender()}}
+<app-board-header/>
+<table>
+  <tr>
+    <th>Сервер</th>
+    <th>Загруженность</th>
+    <th>Занимаемая память</th>
+  </tr>
+  <app-board-row *ngFor="let i of Array.from({length: rowsCount})"/>
+</table>
