--- a/src/app/components/board/board.component.scss
+++ b/src/app/components/board/board.component.scss
@@ -4,9 +4,11 @@ table {
   display: flex;
   flex-direction: column;
   border: 1px solid $border-color;
-  border-radius: 8px;
+  border-top: none;
   border-spacing: 0;
   width: fit-content;
+  margin-top: 0;
+  padding-top: 0;
 }
 
 tr {
@@ -29,10 +31,14 @@ td, th {
 header {
   display: grid;
   grid-template-columns: 200px 200px 200px;
+  margin-bottom: 0;
+  padding-bottom: 0;
+  border-right: 1px solid $border-color;
 
   div {
     display: flex;
     justify-content: center;
     align-items: center;
+    border-left: 1px solid $border-color;
   }
 }
