header wihtout useless rerenders

--- a/src/app/components/board/board-header/board-header.component.html
+++ b/src/app/components/board/board-header/board-header.component.html
@@ -1,6 +1,6 @@
 {{checkRender()}}
 <header>
-  <div>Total servers: {{rowsCount}}</div>
-  <div>Avg load: {{avgLoad | number: '.0-2'}}%</div>
-  <div>Avg memory used: {{avgMemory | number: '.0-2'}}%</div>
+  <app-board-header-item name="Total servers"/>
+  <app-board-header-item name="Avg load"/>
+  <app-board-header-item name="Avg memory used"/>
 </header>
