--- a/src/app/components/board/board-row/board-row.component.html
+++ b/src/app/components/board/board-row/board-row.component.html
@@ -2,5 +2,5 @@
 
 <tr>
   <td>{{number}}</td>
-  <td *ngFor="let value of values">{{value}}</td>
+  <td *ngFor="let value of values">{{value}}%</td>
 </tr>
