--- a/src/app/components/board/board.component.scss
+++ b/src/app/components/board/board.component.scss
@@ -34,11 +34,12 @@ header {
   margin-bottom: 0;
   padding-bottom: 0;
   border-right: 1px solid $border-color;
+  border-top: 1px solid $border-color;
+}
 
-  div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-left: 1px solid $border-color;
-  }
+.header-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-left: 1px solid $border-color;
 }
