--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -6,5 +6,5 @@
     <th>Загруженность</th>
     <th>Занимаемая память</th>
   </tr>
-  <app-board-row *ngFor="let i of Array.from({length: rowsCount})"/>
+  <app-board-row *ngFor="let _ of Array.from({length: rowsCount})"/>
 </table>
