--- a/src/app/components/board/board.component.scss
+++ b/src/app/components/board/board.component.scss
@@ -42,4 +42,6 @@ header {
   justify-content: center;
   align-items: center;
   border-left: 1px solid $border-color;
+  font-family: 'Helvetica', sans-serif;
+  padding-top: 5px;
 }
